feat: add datapath mode to status
